fixed header spacing. Calling this done for now.

--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 #container{
 	display: grid;
 	grid-template-columns: 10% auto 10%;
-	grid-template-rows: 20% auto;
+	grid-template-rows: 150px auto;
 	grid-template-areas:
 		". header ."
-		". main ."
+		". main .";
+	width: 80%;
+  align-items: center;
 }
 
 header {
